--- a/work.html
+++ b/work.html
@@ -73,6 +73,7 @@
     <main class="main-content">
         <div class="inner">
             <div class="introduction">
+                <h1 class="title">Work</h1>
             </div>
             <div class="footer">
                 <footer class="license">
