--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="divider"></div>
                 <div class="work">
-                    <h2 id="work-title">Work</h2>
+                    <h2 class="content-title">Work</h2>
                     <div class="work-list">
                         <div class="work-item">
                             <a href="work/licu.html"><img class="work-item-image" src="assets/work/licu.png" alt="licu" loading="lazy"></a>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="about">
-                    <h2 id="about-title">About</h2>
+                    <h2 class="content-title">About</h2>
                     <div class="about-profile">
                         <div class="about-info">
                             <div class="about-name">
